--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,14 @@ $font-weights: (
 	@return map-get($font-weights, $weight-name);
 }
 
+// Other
+.visible {
+  display: block;
+}
+
+.hidden {
+  display: none;
+}
 
 // Main part
 body {
@@ -63,14 +71,33 @@ body {
 .cardGame {
   margin-right: 20px;
   margin-bottom: 30px;
+
+  &:hover .revealed-on-hover {
+    display: block;
+  }
 }
 
+.div-img {
+  width: 300px;
+  height: 170px;
+  position: relative
+}
 
 .cardIcon {
-  
   width: 300px;
   height: 170px;
   object-fit: cover;
+  cursor: pointer;
+}
+
+.revealed-on-hover {
+  background-color: rgba($color: black, $alpha: 0.5);
+  position: absolute;
+  width: 300px;
+  height: 170px;
+  display: none;
+  top: 0;
+  left: 0;
 }
 
 .btn-show-more-container {
