--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,6 +100,11 @@ body {
   left: 0;
 }
 
+.hover-elt {
+  margin-top: 15px;
+  margin-left: 15px;
+}
+
 .btn-show-more-container {
   @include flexCenter(row);
 }
