--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,6 +63,8 @@ body {
   text-align: justify;
 }
 
+
+// PageList
 .articles {
   display: flex;
   flex-wrap: wrap;
@@ -133,4 +135,11 @@ a.game-link:hover:after {
 
 .btn-show-more-container {
   @include flexCenter(row);
+}
+
+// PageDetail
+.detail-image {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
 }
